# onebrc

./: .gitignore  Cargo.toml  README.md  bench.sh  flamegraph.sh  times.txt
.cargo/: config.toml
data/: Cargo.toml  create_measurements.py
data/src/: main.rs
src/: main.rs
