[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "2.1.1"
memmap2 = "0.9.9"
memchr = { version = "2.7.6", default-features = false }

[profile.bench]
debug = true
lto = "fat"

[profile.release]
debug = true
strip = "none"
panic = "abort"
lto = "fat"
codegen-units = 1
